small addition to our page content

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>hell there</title>
 </head>
 <body>
-<h1>hello coursera</h1>>	
+<h1>hello coursera its just fantastic</h1>	
 </body>
 </html>
