--- a/mod2_assignment/index.html
+++ b/mod2_assignment/index.html
@@ -25,7 +25,7 @@
     <div class="col-lg-4 col-md-12 col-sm-12">
       <div class='text'>
         <h2><span class='yellow'>Sauce</span></h2>
-        <p>I forgot to tell you about that. They kicked me out. I wasn’t supposed to come back after Christmas vacation, on account of I was flunking four subjects and not applying myself and all. They gave me frequent warning to start applying myself - especially around mid-terms, when my parents came up for a conference.
+        <p>I forgot to tell you about that. They kicked me out. I wasn’t supposed to come back after Christmas vacation, on account of I was flunking four subjects and not applying myself and all. They gave me frequent warning to start applying myself - especially around mid-terms, when my parents came up for a.
         </p>
       </div>
     </div>
