--- a/mod2_assignment/index.html
+++ b/mod2_assignment/index.html
@@ -18,14 +18,14 @@
     <div class="col-lg-4 col-md-6 col-sm-12">
       <div class='text'>
         <h2><span class='red'>Peas</span></h2>
-        <p>I ran all the way to the main gate, and then I waited a second till I got my breath. I have no wind, if you want to know the truth. I’m quite a heavy smoker, for one thing - that is, I used to be. They made me cut it out. Another thing, I grew six and a half inches last year. That’s also how I practically got t.b. and came here.
+        <p>I ran all the way to the main gate, and then I waited a second till I got my breath. I have no wind, if you want to know the truth. I’m quite a heavy smoker, for one thing - that is, I used to be. They made me cut it out. Another thing, I grew six and a half inches last year. That’s also how I practically
         </p>
       </div>
     </div>
     <div class="col-lg-4 col-md-12 col-sm-12">
       <div class='text'>
         <h2><span class='yellow'>Sauce</span></h2>
-        <p>I forgot to tell you about that. They kicked me out. I wasn’t supposed to come back after Christmas vacation, on account of I was flunking four subjects and not applying myself and all. They gave me frequent warning to start applying myself - especially around mid-terms, when my parents came up for a.
+        <p>I forgot to tell you about that. They kicked me out. I wasn’t supposed to come back after Christmas vacation, on account of I was flunking four subjects and not applying myself and all. They gave me frequent warning to start applying myself - especially around mid-terms, when my parents
         </p>
       </div>
     </div>
