--- a/mod3_assignment/index.html
+++ b/mod3_assignment/index.html
@@ -12,17 +12,86 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <title>Bootstrap Starter Page</title>
+    <title>MOD3 ASS</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
+
 <body>
 
-  <h1>Hello Coursera!</h1>
+<nav class="navbar navbar-default smart-scroll navbar-expand-lg navbar-dark bg-primary">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#anuss" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">FOOD, LLC</a>
+    </div>
+
+    <div id="anuss" class="collapse navbar-collapse">
+       <ul id="nav-list" class="nav navbar-nav navbar-right">
+        <li>
+          <a href="#chicken">Chicken</a>
+        </li>
+        <li>
+          <div class="divline visible-xs"></div>
+          <a href="#peas">Peas</a>
+        </li>
+        <li>
+          <div class="divline visible-xs"></div>
+          <a href="#sauce">Sauce</a>
+        </li>
+        <li id="phone" class="hidden-xs">
+          <a href="tel:410-602-5008">
+            <span>410-602-5008</span></a><div>* We Deliver</div>
+        </li>
+      </ul><!-- #nav-list -->
+
+    </div><!-- .collapse .navbar-collapse -->
+  </div>
+</nav>
+
+<h1 class="text-center">OUR MENU</h1>
+
+<div class="container">
+  <div class="row">
+    <div class= "col-sm-12">
+      <div class='text'>
+        <h2><span id="chicken" class='pink'>Chicken</span></h2>
+        <p>If you really want to hear about it, the first thing you’ll probably want to know is where I was born, and what my lousy childhood was like, and how my parents were occupied and all before they had me, and all that David Copperfield kind of crap, but I don’t feel like going into it, if you want to know the truth. In the first place, that stuff bores me, and in the second place, my parents would have two hemorrhages apiece if I told anything pretty personal about them. They’re quitee touchy about anything like that, especially my father. They’re nice and all - I’m not saying that - but they’re also touchy as hell. Besides, I’m not going to tell you my whole goodam autobiography or anything. I’ll just tell you about this madman stuff that happened to me last Christmas just before I got pretty run-down and had to come out and take it easy. I mean that’s all I told D.B. about, and he’s my brother and all. He’s in Hollywood. That isn’t too far from this crumby place, and he comes over and visits me practically every week end. He’s going to drive me home when I go home next month maybe. He just got a Jaguar. One of those little English jobs that can do around two hundred miles an hour. It cost him damn near four thousand bucks. He’s got a lot of dough, now. He didn’t use to. He used to be just a regular writer, when he was home. He wrote thizs terrific book of short stories, The Secret Goldfish, in case you never heard of him. The best one in it was «‘The Secret Goldfish.’ It was about this little kid that wouldn’t let anybody look at his goldfish because he’d bought it with his own money. It killed me. Now he’s out in Hollywood, D.B., being a prostitute. If there’s one thing I hate, it’s the movies. Don’t even mention them to me.
+        </p>
+      </div>
+    </div>
+    <div class="col-sm-12">
+      <div class='text'>
+        <h2><span id="peas" class='red'>Peas</span></h2>
+        <p>Where I want to start is the day I left Pencey Prep. Pencey Prep is the school that’s in Agertown, Pennsylvania. You probably heard of it. You’ve probably seen the ads, anyway. They advertise in about a thousand magazines, always showing some hot-shot guy on a horse jumping over a fence. Like as if all you ever did at Pencey was play polo all the time. I never even once saw a horse anywhere near the place. And underneath the guy on the horse’s picture, it always says: ‘Since 1888 we have been molding boys into splendid, clear-thinking young men’. Strictly for the birds. They don’t do any damn more molding at Pencey than they do at any other school. And I didn’t know anybody there that was splendid and clear-thinking and all. Maybe two guys. If that many. And they probably came to Pencey that way.
+        </p>
+      </div>
+    </div>
+    <div class="col-sm-12">
+      <div class='text'>
+        <h2><span id="sauce" class='yellow'>Sauce</span></h2>
+        <p>Anyway, it was the Saturday of the football game with Saxon Hall. The game with Saxon Hall was supposed to be a very big deal around Pencey. It was the last game of the year, and you were supposed to commit suicide ou something if old Pencey didn’t win. I remember around three o’clock that afternoon I was standing way the hell on top of Thomsen Hill, right next to this crazy cannon that was in the Revolutionary War and all. You could see the whole field from there, and you could see the two teams bashing each other all over the place. You couldn’t see the granstand too hot, but you could hear them all yelling, deep and terrific on the Pencey side, because practically the whole school except me was there, and scrawny and faggy on the Saxon Hall side, because the visiting team hardly ever brought many people with them.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-1.11.3.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
+
+
 </body>
+
+
+
 </html>
